--- a/app/src/main/res/layout/fragment_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_recycler_view.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.andrew.ivegan.Fragment.BlankFragment">
+    tools:context="com.example.andrew.ivegan.Fragment.RecyclerViewFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
