--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,14 @@
     <Button
         android:id="@+id/loginButton"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="50dp"
+        android:background="@color/colorDifferent"
         android:text="@string/login"
+        android:textColor="@color/white"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/singupButton" />
@@ -22,11 +25,14 @@
     <Button
         android:id="@+id/singupButton"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="250dp"
+        android:background="@color/colorDifferent"
         android:text="@string/sign_up"
+        android:textColor="@color/white"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
